--- a/CCIP/CCIP/scenarioCell.xib
+++ b/CCIP/CCIP/scenarioCell.xib
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="16A201w" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -8,28 +8,52 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="checkmark" indentationWidth="10" id="KGk-i7-Jjw" customClass="scenarioCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="checkmark" indentationWidth="10" rowHeight="66" id="KGk-i7-Jjw" customClass="scenarioCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="66"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="281" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="281" height="65.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q5F-2J-k1Z">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q5F-2J-k1Z">
+                        <rect key="frame" x="8" y="8" width="265" height="30.5"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="CHh-wS-t6D"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ycw-1E-e5U">
+                        <rect key="frame" x="8" y="39.5" width="265" height="18"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="18" id="aZU-6O-Ejm"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="ycw-1E-e5U" firstAttribute="top" secondItem="Q5F-2J-k1Z" secondAttribute="bottom" constant="1" id="AX2-pO-SYp"/>
                     <constraint firstAttribute="trailingMargin" secondItem="Q5F-2J-k1Z" secondAttribute="trailing" id="U12-W6-3lN"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="ycw-1E-e5U" secondAttribute="trailing" id="V7N-rf-i8g"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="ycw-1E-e5U" secondAttribute="bottom" id="bFH-Xy-0p3"/>
                     <constraint firstItem="Q5F-2J-k1Z" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="cga-3t-Vd2"/>
+                    <constraint firstItem="ycw-1E-e5U" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="gNl-aG-ykC"/>
                     <constraint firstItem="Q5F-2J-k1Z" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="hQk-Dt-Het"/>
                     <constraint firstItem="Q5F-2J-k1Z" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="mbO-XE-W9e"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="mbO-XE-W9e"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <connections>
                 <outlet property="scenarioLabel" destination="Q5F-2J-k1Z" id="aD0-oz-kPR"/>
+                <outlet property="timeRangeLabel" destination="ycw-1E-e5U" id="JZ2-mn-LTZ"/>
             </connections>
+            <point key="canvasLocation" x="89" y="107"/>
         </tableViewCell>
     </objects>
 </document>
