--- a/CCIP/CCIP/scenarioCell.xib
+++ b/CCIP/CCIP/scenarioCell.xib
@@ -23,8 +23,17 @@
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CQu-zY-rv9">
+                        <rect key="frame" x="165.5" y="39.5" width="107.5" height="18"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="18" id="Mpm-eb-blZ"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ycw-1E-e5U">
-                        <rect key="frame" x="8" y="39.5" width="265" height="18"/>
+                        <rect key="frame" x="8" y="39" width="157.5" height="18"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="18" id="aZU-6O-Ejm"/>
                         </constraints>
@@ -35,23 +44,32 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="ycw-1E-e5U" firstAttribute="top" secondItem="Q5F-2J-k1Z" secondAttribute="bottom" constant="1" id="AX2-pO-SYp"/>
+                    <constraint firstItem="CQu-zY-rv9" firstAttribute="top" secondItem="Q5F-2J-k1Z" secondAttribute="bottom" constant="1" id="Jed-kG-Pts"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="CQu-zY-rv9" secondAttribute="trailing" id="OK8-jX-kU9"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="CQu-zY-rv9" secondAttribute="bottom" id="Otg-r4-iTi"/>
                     <constraint firstAttribute="trailingMargin" secondItem="Q5F-2J-k1Z" secondAttribute="trailing" id="U12-W6-3lN"/>
                     <constraint firstAttribute="trailingMargin" secondItem="ycw-1E-e5U" secondAttribute="trailing" id="V7N-rf-i8g"/>
                     <constraint firstAttribute="bottomMargin" secondItem="ycw-1E-e5U" secondAttribute="bottom" id="bFH-Xy-0p3"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="CQu-zY-rv9" secondAttribute="trailing" id="bRw-2y-2Ln"/>
                     <constraint firstItem="Q5F-2J-k1Z" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="cga-3t-Vd2"/>
+                    <constraint firstItem="CQu-zY-rv9" firstAttribute="width" secondItem="ycw-1E-e5U" secondAttribute="width" constant="-50" id="d8k-Em-x0k"/>
                     <constraint firstItem="ycw-1E-e5U" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="gNl-aG-ykC"/>
                     <constraint firstItem="Q5F-2J-k1Z" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="hQk-Dt-Het"/>
                     <constraint firstItem="Q5F-2J-k1Z" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="mbO-XE-W9e"/>
+                    <constraint firstItem="CQu-zY-rv9" firstAttribute="leading" secondItem="ycw-1E-e5U" secondAttribute="trailing" id="qu3-z9-LZ8"/>
                 </constraints>
                 <variation key="default">
                     <mask key="constraints">
                         <exclude reference="mbO-XE-W9e"/>
+                        <exclude reference="V7N-rf-i8g"/>
+                        <exclude reference="bRw-2y-2Ln"/>
                     </mask>
                 </variation>
             </tableViewCellContentView>
             <connections>
                 <outlet property="scenarioLabel" destination="Q5F-2J-k1Z" id="aD0-oz-kPR"/>
                 <outlet property="timeRangeLabel" destination="ycw-1E-e5U" id="JZ2-mn-LTZ"/>
+                <outlet property="usedTimeLabel" destination="CQu-zY-rv9" id="NTT-LQ-ryW"/>
             </connections>
             <point key="canvasLocation" x="89" y="107"/>
         </tableViewCell>
