--- a/CCIP/CCIP/Main.storyboard
+++ b/CCIP/CCIP/Main.storyboard
@@ -47,9 +47,10 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="N3c-1x-If0">
-                                <rect key="frame" x="70" y="366" width="460" height="30"/>
+                                <rect key="frame" x="150" y="366" width="300" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="33T-P4-oX9"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="6FO-ei-bwB"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -80,13 +81,18 @@
                             <constraint firstItem="N3c-1x-If0" firstAttribute="leading" secondItem="7ZP-Wx-GSU" secondAttribute="leadingMargin" constant="50" id="S00-dw-zFr"/>
                             <constraint firstItem="N3c-1x-If0" firstAttribute="top" secondItem="nug-PN-SE0" secondAttribute="bottom" constant="96" id="Uhb-iJ-6uO"/>
                             <constraint firstAttribute="trailingMargin" secondItem="N3c-1x-If0" secondAttribute="trailing" constant="50" id="eNG-eq-nTB"/>
+                            <constraint firstItem="N3c-1x-If0" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="7ZP-Wx-GSU" secondAttribute="leadingMargin" constant="10" id="gFJ-ZQ-1MH"/>
                             <constraint firstAttribute="trailingMargin" secondItem="nug-PN-SE0" secondAttribute="trailing" constant="20" id="oKL-dN-gMh"/>
                             <constraint firstItem="nug-PN-SE0" firstAttribute="leading" secondItem="7ZP-Wx-GSU" secondAttribute="leadingMargin" constant="20" id="pJn-5y-iQq"/>
+                            <constraint firstItem="N3c-1x-If0" firstAttribute="centerX" secondItem="7ZP-Wx-GSU" secondAttribute="centerX" id="ph6-TQ-5L5"/>
+                            <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="N3c-1x-If0" secondAttribute="trailing" constant="10" id="tDT-z0-yhg"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="KOz-oh-FfY"/>
                                 <exclude reference="Eqi-QH-TRb"/>
+                                <exclude reference="S00-dw-zFr"/>
+                                <exclude reference="eNG-eq-nTB"/>
                             </mask>
                         </variation>
                     </view>
