--- a/CCIP/CCIP/StaffCell.xib
+++ b/CCIP/CCIP/StaffCell.xib
@@ -8,31 +8,50 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="StaffCell" id="gJj-kL-uIn" customClass="StaffCell">
-            <rect key="frame" x="0.0" y="0.0" width="140" height="100"/>
+            <rect key="frame" x="0.0" y="0.0" width="304" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="140" height="100"/>
+                <rect key="frame" x="0.0" y="0.0" width="304" height="60"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="StaffIconDefault.png" translatesAutoresizingMaskIntoConstraints="NO" id="F3y-GP-5oQ">
-                        <rect key="frame" x="50" y="8" width="40" height="40"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="StaffIconDefault.png" translatesAutoresizingMaskIntoConstraints="NO" id="F3y-GP-5oQ">
+                        <rect key="frame" x="8" y="8" width="44" height="44"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="44" id="3rG-gC-njg"/>
+                            <constraint firstAttribute="width" constant="44" id="kcA-VP-YdO"/>
+                        </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Display Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zSp-Vx-Idi">
-                        <rect key="frame" x="8" y="72" width="124" height="20"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Display Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zSp-Vx-Idi">
+                        <rect key="frame" x="60" y="8" width="236" height="24"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="24" id="780-YZ-uqY"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dtx-ch-J8c">
-                        <rect key="frame" x="8" y="50" width="124" height="20"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dtx-ch-J8c">
+                        <rect key="frame" x="60" y="32" width="236" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="VtP-c1-6k3"/>
+                        </constraints>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
-            <color key="backgroundColor" red="0.91853448275862071" green="1" blue="0.87801724137931036" alpha="1" colorSpace="calibratedRGB"/>
+            <constraints>
+                <constraint firstItem="zSp-Vx-Idi" firstAttribute="leading" secondItem="gJj-kL-uIn" secondAttribute="leading" constant="60" id="6Dg-pS-yyE"/>
+                <constraint firstAttribute="trailing" secondItem="dtx-ch-J8c" secondAttribute="trailing" constant="8" id="9eL-lm-lJY"/>
+                <constraint firstAttribute="bottom" secondItem="dtx-ch-J8c" secondAttribute="bottom" constant="8" id="PZj-Sj-9Du"/>
+                <constraint firstItem="F3y-GP-5oQ" firstAttribute="centerY" secondItem="gJj-kL-uIn" secondAttribute="centerY" id="erW-6i-BNg"/>
+                <constraint firstAttribute="trailing" secondItem="zSp-Vx-Idi" secondAttribute="trailing" constant="8" id="hWG-21-5Mz"/>
+                <constraint firstItem="dtx-ch-J8c" firstAttribute="leading" secondItem="gJj-kL-uIn" secondAttribute="leading" constant="60" id="rFx-Ub-zs7"/>
+                <constraint firstItem="F3y-GP-5oQ" firstAttribute="leading" secondItem="gJj-kL-uIn" secondAttribute="leading" constant="8" id="wB6-cQ-Wqp"/>
+                <constraint firstItem="zSp-Vx-Idi" firstAttribute="top" secondItem="gJj-kL-uIn" secondAttribute="top" constant="8" id="weC-9h-i6T"/>
+            </constraints>
             <size key="customSize" width="128" height="100"/>
             <connections>
                 <outlet property="staffImg" destination="F3y-GP-5oQ" id="Q0k-dh-NfD"/>
