--- a/CCIP/CCIP/Base.lproj/LaunchScreen.storyboard
+++ b/CCIP/CCIP/Base.lproj/LaunchScreen.storyboard
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="16A239j" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
         <deployment identifier="iOS"/>
         <development version="7000" identifier="xcode"/>
@@ -19,14 +19,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="COSCUP" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Gr5-fc-Hrz">
-                                <rect key="frame" x="211" y="273" width="177" height="54"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="177" id="Q1y-p7-23m"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                             <imageView opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreenIcon.png" translatesAutoresizingMaskIntoConstraints="NO" id="roj-JR-9r3">
                                 <rect key="frame" x="180" y="258" width="240" height="83"/>
                                 <constraints>
@@ -44,16 +36,8 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="roj-JR-9r3" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="CEO-sb-qZc"/>
-                            <constraint firstItem="Gr5-fc-Hrz" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="JHN-74-hor"/>
                             <constraint firstItem="roj-JR-9r3" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Qte-mV-Ffp"/>
-                            <constraint firstItem="Gr5-fc-Hrz" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="d3E-7s-MVs"/>
-                            <constraint firstItem="Gr5-fc-Hrz" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="253" id="yDS-Ic-vcc"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="subviews">
-                                <exclude reference="Gr5-fc-Hrz"/>
-                            </mask>
-                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
