--- a/CCIP/CCIP/ScheduleViewCell.xib
+++ b/CCIP/CCIP/ScheduleViewCell.xib
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="16A254g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -16,13 +16,13 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="12" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HhH-At-Wbj">
-                        <rect key="frame" x="8" y="8" width="231" height="27.5"/>
+                        <rect key="frame" x="20" y="8" width="227" height="27.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HH" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="12" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TEe-5M-soe">
-                        <rect key="frame" x="249" y="8" width="30" height="27.5"/>
+                        <rect key="frame" x="257" y="8" width="30" height="27.5"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="30" id="qW0-FY-vQ9"/>
                         </constraints>
@@ -34,8 +34,8 @@
                 <constraints>
                     <constraint firstItem="TEe-5M-soe" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="85h-p8-f1W"/>
                     <constraint firstItem="HhH-At-Wbj" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="8S1-fa-KuD"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="TEe-5M-soe" secondAttribute="trailing" id="Lim-JT-5Ta"/>
-                    <constraint firstItem="HhH-At-Wbj" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="cQ1-cK-QwJ"/>
+                    <constraint firstAttribute="trailing" secondItem="TEe-5M-soe" secondAttribute="trailing" id="Lim-JT-5Ta"/>
+                    <constraint firstItem="HhH-At-Wbj" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="cQ1-cK-QwJ"/>
                     <constraint firstItem="TEe-5M-soe" firstAttribute="leading" secondItem="HhH-At-Wbj" secondAttribute="trailing" constant="10" id="n31-cj-h5O"/>
                     <constraint firstAttribute="bottomMargin" secondItem="HhH-At-Wbj" secondAttribute="bottom" id="o1E-Km-h2C"/>
                     <constraint firstAttribute="bottomMargin" secondItem="TEe-5M-soe" secondAttribute="bottom" id="uYw-iy-RDj"/>
